<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">3D Sandbox</string>
    <string name="toc">Table of Contents</string>
    <string name="tocHeader">Table of contents</string>
    <string name="lesson_one">Lesson One: Getting Started</string>  
    <string name="lesson_one_subtitle">This lesson shows the basics of drawing in OpenGL ES 2.</string>
    <string name="lesson_two">Lesson Two: An Intro to Lighting</string>  
    <string name="lesson_two_subtitle">Learn about ambient and diffuse lighting in this lesson.</string>
    <string name="lesson_three">Lesson Three: Adding Per-Pixel Lighting</string>  
    <string name="lesson_three_subtitle">This builds on lesson two by adding per-pixel lighting.</string>
    <string name="lesson_three_wallpaper_1">Using GLSurfaceView</string>
    <string name="lesson_three_wallpaper_2">Using re-implementation of GLSurfaceView</string>
    <string name="lesson_three_wallpaper_3">Switching implementations</string>
    <string name="lesson_four">Lesson Four: Basic Texturing</string>  
    <string name="lesson_four_subtitle">This builds on lesson three by adding basic texturing.</string>
    <string name="lesson_five">Lesson Five: An Intro to Blending</string>  
    <string name="lesson_five_subtitle">This lesson takes a look at the basics of OpenGL blending.</string>
    <string name="lesson_five_startup_toast">Tap the screen to switch between blended and normal mode.</string>
    <string name="lesson_six">Lesson Six: Texture Filtering Modes</string>  
    <string name="lesson_six_subtitle">This lesson looks at the different texture filtering modes available in OpenGL ES.</string>
    <string name="lesson_six_set_min_filter">Set min. filter</string>
    <string name="lesson_six_set_mag_filter">Set mag. filter</string>
    <string name="lesson_six_set_min_filter_message">Set GL_TEXTURE_MIN_FILTER</string>
    <string name="lesson_six_set_mag_filter_message">Set GL_TEXTURE_MAG_FILTER</string>
    <string-array name="lesson_six_min_filter_types">
    	<item>GL_NEAREST</item>
    	<item>GL_LINEAR</item>
    	<item>GL_NEAREST_MIPMAP_NEAREST</item>
    	<item>GL_NEAREST_MIPMAP_LINEAR</item>
    	<item>GL_LINEAR_MIPMAP_NEAREST</item>
    	<item>GL_LINEAR_MIPMAP_LINEAR</item>
    </string-array>
    <string-array name="lesson_six_mag_filter_types">
    	<item>GL_NEAREST</item>
    	<item>GL_LINEAR</item>    	
    </string-array>
    <string name="lesson_seven">Lesson Seven: An Intro to VBOs</string>  
    <string name="lesson_seven_subtitle">This lesson looks at vertex buffer objects (VBOs).</string>
   	<string name="lesson_seven_increase_cube_count">Increase cube count</string>
   	<string name="lesson_seven_decrease_cube_count">Decrease cube count</string>
   	<string name="lesson_seven_using_VBOs">Using VBOs</string>
   	<string name="lesson_seven_not_using_VBOs">Not using VBOs</string>
   	<string name="lesson_seven_using_stride">Using stride</string>
   	<string name="lesson_seven_not_using_stride">Not using stride</string>
   	<string name="lesson_eight">Lesson Eight: An Intro to IBOs</string>  
    <string name="lesson_eight_subtitle">This lesson looks at index buffer objects (IBOs).</string>
   	<string name="lesson_eight_error_could_not_create_vbo">Could not create vertex buffer object: %s</string>
    <string name="lesson_eight_error_unknown">Unknown error: %s</string>
    <!--new stuff-->

    <string name="objects_title">Various objects - with lighting</string>
    <string name="objects_subtitle">Switchable shaders.</string>

    <string name="button_objects_using_vertex_shading">Vertex shading</string>
    <string name="button_objects_using_pixel_shading">Pixel shading</string>
    <string name="button_objects_using_wireframe_rendering">Wire frame</string>
    <string name="button_objects_using_triangle_rendering">Solid</string>
    <string name="button_objects_only_ibo">Only IBO</string>
    <string name="button_objects_with_direct">Add Direct</string>

    <string name="activity_load_obj_file_title">Load an OBJ file</string>
    <string name="activity_load_obj_file_subtitle">Parses an OBJ file and displays it</string>

    <string name="button_next_obj">Next OBJ</string>
    <string name="button_prev_obj">Prev OBJ</string>
    <string name="button_null_string"> </string>

    <string name="objects_multiple_title">Add triangles to the scene</string>
    <string name="objects_multiple_subtitle">Find the system performance limit</string>

    <string name="button_objects_multiple_more_triangles">More TRIs</string>
    <string name="button_objects_multiple_fewer_triangles">Fewer TRIs</string>
</resources>