<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"	
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<com.jimandreas.opengl.displayobjects.GLSurfaceViewDisplayObjects
		android:id="@+id/gl_surface_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />
	<LinearLayout
		style="?android:attr/buttonBarStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|center_horizontal"
		android:orientation="horizontal">
		<Button
			android:id="@+id/button_only_ibo"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"					
			android:text="@string/button_objects_with_direct" />
		<Button
			android:id="@+id/button_increase_num_cubes"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"					
			android:text="@string/button_null_string" />
		<Button
			android:id="@+id/button_switch_rendering_mode"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"					
			android:text="@string/button_objects_using_wireframe_rendering" />
		<Button
			android:id="@+id/button_switch_shaders"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"					
			android:text="@string/button_objects_using_pixel_shading" />
	</LinearLayout>

</FrameLayout>
